--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,10 @@
 /* ====== General Reset ====== */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -21,7 +27,7 @@ nav {
 /* nav a rule → ONLY color, padding, display:block */
 nav a {
   color: white;
-  padding: 5px;
+  padding: 10px;
   display: block;
 }
 
@@ -41,29 +47,35 @@ img {
 
 /* main rule → max-width required */
 main {
-  max-width: 800px;
-  margin: 20px auto;
-  padding: 10px;
-  text-align: center;
+  max-width: 640px;
+}
+main img {
+  width: 150px;
+  height: auto;
+  border: 1px solid steelblue;
+  padding: 2px;
+  box-shadow: 0 0 30px gray;
+  float: right;
+  margin: 0 0 1rem 1rem;
 }
 
 /* aside rule */
 aside {
-  width: 80%;
-  margin: 20px auto;
-  border: 2px solid #333;
-  padding: 15px;
-  background-color: #f4f4f4;
-  color: #222;
+  width: 20em;
   text-align: center;
-  border-radius: 10px;
+  position: relative;
 }
 
 /* aside img rule → width:200px + height:auto */
 aside img {
   width: 200px;
   height: auto;
-  margin-bottom: 10px;
+}
+
+aside h2 { 
+  position: relative;
+  top: 1px;
+  left: 5px;
 }
 
 /* p rule → padding:0 */
@@ -78,4 +90,13 @@ footer {
   text-align: center;
   padding: 10px;
   background-color: #eee;
+}
+
+/* Class Selector */
+.box {
+  margin: 1rem;
+  border: 1px solid rgba(0, 0, 0 ,.1);
+  padding: 1rem;
+  background-color: #eee;
+  color: #000;
 }
